--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,11 @@
    font-family: 'Manrope', sans-serif;
  }
 
+ img {
+   display: block;
+   width: 100%;
+ }
+
 
 
  button {
@@ -34,8 +39,10 @@
 
  }
 
- body {
+ body,
+ .container {
    height: 100vh;
+   background: var(--dark-blue);
 
  }
 
@@ -53,11 +60,16 @@
  .main {
    margin: auto;
    color: var(--light-cyan);
-   background: var(--grayish-blue);
+   background: var(--dark-grayish-blue);
    width: 40%;
    max-width: 450px;
-   padding: 4rem;
+   padding: 2rem 6rem;
    text-align: center;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   gap: 20px;
  }
 
 
@@ -65,4 +77,8 @@
    color: var(--neon-green);
    text-transform: uppercase;
    letter-spacing: 5px;
+ }
+
+ picture {
+   z-index: 1;
  }
