--- a/src/index.css
+++ b/src/index.css
@@ -42,28 +42,28 @@
  body,
  .container {
    height: 100vh;
-   background: var(--dark-blue);
+   width: 100%;
 
  }
 
  #root {
-   height: 100%;
+   background: var(--dark-blue);
+   align-items: center;
+   display: flex;
+   justify-content: center;
  }
 
  .container {
    align-items: center;
    display: flex;
    justify-content: center;
-   height: 100%;
+
  }
 
  .main {
-   margin: auto;
    color: var(--light-cyan);
    background: var(--dark-grayish-blue);
    width: 40%;
-   max-width: 450px;
-   padding: 2rem 6rem;
    text-align: center;
    display: flex;
    justify-content: center;
