--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,33 @@
 
  button {
    cursor: pointer;
+ }
 
+ button:hover {
+   box-shadow: 0 0 1rem 0.1rem var(--neon-green);
+   -webkit-animation: spin 4s linear infinite;
+   -moz-animation: spin 4s linear infinite;
+   animation: spin 1s linear infinite;
+
+ }
+
+ @-moz-keyframes spin {
+   100% {
+     -moz-transform: rotate(360deg);
+   }
+ }
+
+ @-webkit-keyframes spin {
+   100% {
+     -webkit-transform: rotate(360deg);
+   }
+ }
+
+ @keyframes spin {
+   100% {
+     -webkit-transform: rotate(360deg);
+     transform: rotate(360deg);
+   }
  }
 
  body,
