--- a/src/index.css
+++ b/src/index.css
@@ -111,3 +111,14 @@
    position: relative;
    bottom: 2.5%;
  }
+
+ .attribution {
+   font-size: 18px;
+   text-align: center;
+   font-weight: 800;
+   margin-top: 40px;
+ }
+
+ .attribution a {
+   color: var(--neon-green);
+ }
